# mf-moba

./: README.md  pyproject.toml
moba/: dev.py  moba_efficient.py  moba_naive.py
model/llama/: llama.py  llama_config.py  llama_transformer.py
tests/: plot_3d.py  speedup.txt  test_moba_attn.py
